Fix News page so it re-flows on mobile. Fix book slider left/right arrows and scrolling for 'sm' width (had issues not showing arrows, or arrows pushing page margins). Adjusted size category breaks to better represent current mobile/desktop screen witdths.

--- a/generators/authorsite/style/default/images.scss
+++ b/generators/authorsite/style/default/images.scss
@@ -99,12 +99,6 @@
             min-width: 300px;
             min-height: 300px;
         }
-        .entry-image-left {
-            background-position: top left;
-        }
-        .entry-image-right {
-            background-position: top right;
-        }
     }
 }
 
